# lucerna

./: .gitmodules  CMakeLists.txt
include/: Application.h  Entity.h  TexturedRect.h  application.h  buffer_layout.h  camera.h  displaymanager.h  ebo.h  index_buffer.h  mesh.h  primitive.h  renderer.h  resource_manager.h  shader.h  shape.h  sprite_renderer.h  texture.h  texture2D.h  vao.h  vbo.h  vertex_array.h  vertex_buffer.h  window.h
include/lucerna/: lucerna.h
shaders/: default.frag  default.glsl  default.vert  image_filtering.glsl  sprite.glsl
src/: Application.cpp  Entity.cpp  TexturedRect.cpp  application.cpp  camera.cpp  displaymanager.cpp  ebo.cpp  index_buffer.cpp  main.cpp  mesh.cpp  primitive.cpp  renderer.cpp  resource_manager.cpp  shader.cpp  shape.cpp  sprite_renderer.cpp  texture.cpp  texture2D.cpp  vao.cpp  vbo.cpp  vertex_array.cpp  vertex_buffer.cpp  window.cpp
